src/assets/styles/index.less
html {
  position: absolute;
  width: 100%;
  height: 100%;
  text-align: center;
}

body {
  position: relative;
  width: 100%;
  height: 100%;
  margin: 0;
}

#root,
#layout {
  width: inherit;
  height: inherit;
}

#content-layout {
  min-height: 80%;
  padding-top: 5%;
  padding-bottom: 10%;
}

@font-face {
  font-family: 'MyFont';
  src: local('MyFont'), url('../fonts/Karla-Regular.ttf') format('truetype');
}

* {
  font-family: MyFont;
}

// SOCIAL ICONS
.social-icons {
  padding: 0;
  list-style: none;
  margin: 1em;
}

.social-icons li {
  display: inline-block;
  margin: 0.15em;
  position: relative;
  font-size: 1.2em;
}

.social-icons i {
  color: #fff;
  position: absolute;
  top: 25%;
  left: 25%;
  transition: all 265ms ease-out;
}

.social-icons a {
  display: inline-block;
}

.social-icons a:before {
  transform: scale(1);
  -ms-transform: scale(1);
  -webkit-transform: scale(1);
  content: ' ';
  width: 35px;
  height: 35px;
  border-radius: 100%;
  display: block;
  background: linear-gradient(45deg, #00b5f5, #002a8f);
  transition: all 265ms ease-out;
}

.social-icons a:hover:before {
  transform: scale(0);
  transition: all 265ms ease-in;
}

.social-icons a:hover i {
  transform: scale(2);
  -ms-transform: scale(2);
  -webkit-transform: scale(2);
  color: #00b5f5;
  background: -webkit-linear-gradient(45deg, #00b5f5, #002a8f);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  transition: all 265ms ease-in;
}

@keyframes bounce {
  0%,
  100%,
  20%,
  50%,
  80% {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
  40% {
    -webkit-transform: translateY(-15px);
    -ms-transform: translateY(-15px);
    transform: translateY(-15px);
  }
  60% {
    -webkit-transform: translateY(-15px);
    -ms-transform: translateY(-15px);
    transform: translateY(-15px);
  }
}

.bounce {
  -webkit-animation-duration: 2.5s;
  animation-duration: 2.5s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  animation-iteration-count: infinite;
  -webkit-animation-iteration-count: infinite;
}

.bounce:hover {
  animation-name: bounce;
  -moz-animation-name: bounce;
}

